--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,10 @@ header {
     padding: 30px 40px 20px;
     background-color: #FDF3D8;
     border-bottom: solid 1px black;
-    grid-template-columns: auto;
-    width: 100%;
+    margin-bottom: 50px;
+    align-items: start;
+    justify-content: space-around;
+    gap: 50px;
 }
 
 .logo {
@@ -11,26 +13,35 @@ header {
     height: auto;
 }
 
-.search {
+.head {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    gap: 50px;
+    width: 100%;
+}
+
+.search{
+    text-decoration: none!;
+    display: flex;
     gap: 20px;
+    width: 100%;
 }
 
 ul {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    column-gap: 50px;
+    row-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, auto));
     justify-content: center;
     align-items: center;
     gap: 150px;
-    width: 100vw;
     padding: 30px 20px 0px 20px;
-    margin: auyo;
 }
 
 li {
+    font-size: larger;
     list-style-type: none;
     text-transform: uppercase;
     color: var(--secondary-color);
