--- a/src/app/pokeinfos/pokeinfos.component.css
+++ b/src/app/pokeinfos/pokeinfos.component.css
@@ -3,6 +3,7 @@
     width: auto;
     height: 150px;
     background-color: white;
+    border: 0.5px solid #FDD76E;
     object-fit: cover;
     text-align: center;
     border-radius: 15px;
@@ -14,10 +15,6 @@ img{
     height: auto;
 }
 
-p{
-    font-size: large;
-}
-
 .price{
     width: 70%;
 }
@@ -26,7 +23,8 @@ p{
     padding: 10px;
     width: 250px;
     height: auto;
-    background-color: antiquewhite;
+    background-color: #FDF3D8;
+    border: 0.5px solid #FDD76E;
     color: black;
     border-radius: 15px;
     display: block;
