--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,39 @@
 body {
-    font-family: 'Be Vietnam Pro', sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: none;
     width: 100vw;
 }
+
+
+
+h3{
+    font-size: medium;
+    width: 70%;
+}
+
+a{
+    background-color: white;
+    color: #D19E04;
+    font-size: 10pt;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: 0.5px solid #D19E04; 
+    padding: 5px 10px; 
+    border-radius: 5px
+}
+
 
 * {
     margin: 0;
     padding: 0;
 }
 
-p {
-    font-size: small;
+p, li{
+    font-size: 12spt;
+    list-style-type: none;
 }
 
-a {
-    font-size: small;
-}
 
 :root {
     --primary-color: #FCBA04;
@@ -24,7 +42,7 @@ a {
     --shadow-color: #4d4d4d;
 }
 
-button.primary {
+button {
     padding: 8px 15px;
     background: var(--primary-color);
     color: black;
@@ -43,7 +61,8 @@ input {
     border-right: none;
     border-bottom: solid 1px #FDD76E;
     display: inline-block;
-    width: 50%;
+    width: 75%;
     height: fit-content;
-    text-decoration: none;font-size: medium;
+    text-decoration: none;
+    font-size: medium;
 }
