--- a/src/app/pokeinfos/pokeinfos.component.css
+++ b/src/app/pokeinfos/pokeinfos.component.css
@@ -4,15 +4,16 @@
     height: 150px;
     background-color: white;
     border: 0.5px solid #FDD76E;
-    object-fit: cover;
-    text-align: center;
     border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
 img{
-    width: 150px;
-    height: auto;
+    width: auto;
+    height: 120px;
 }
 
 .price{
