--- a/src/app/pokemon-details/pokemon-details.component.css
+++ b/src/app/pokemon-details/pokemon-details.component.css
@@ -1,13 +1,14 @@
 .part1 {
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    gap: 30px;
 }
 
-.catalog{
+.catalog, .type{
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
+    color: #D19E04;
 }
 
 table {
@@ -37,17 +38,13 @@ th {
 }
 
 .title {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
     align-items: flex-start;
     height: fit-content;
 }
 
 
 img {
-    width: 400px;
+    width: 200px;
 }
 
 .screem{
