--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,8 @@ a{
     text-transform: uppercase;
     border: 0.5px solid #D19E04; 
     padding: 5px 10px; 
-    border-radius: 5px
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 
@@ -51,6 +52,7 @@ button {
     border: none;
     border-radius: 4px;
     height: fit-content;
+    cursor: pointer;
 }
 
 input {
@@ -65,4 +67,5 @@ input {
     height: fit-content;
     text-decoration: none;
     font-size: medium;
+    cursor: pointer;
 }
